# quad-stack

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  setup.sh
docs/: contact_detector_tuning.md
hb40_commons/: CMakeLists.txt  README.md  bezier_diff.m  jacobian_symbolic.m
hb40_commons/include/: commons_config.hpp  commons_math.hpp  commons_ros.hpp
hb40_commons/launch/: remote.launch.py  sim.launch.py
hb40_commons/models/mujoco/: hb40.xml  intention.xml
hb40_commons/models/rbdl/: intention.lua
hb40_commons/models/urdf/: hb40.urdf  intention.urdf
hb40_commons/msg/: BridgeData.msg  BridgeState.msg  LegState.msg  RobotState.msg
hb40_commons/src/: commons_ros.cpp  tinyOverlord.cpp
include/legged-kinematics-odometry/: kinematics_odometry.hpp
launch/: kinematics_odometry.launch.py
leg_odometry/: CMakeLists.txt  README.md  package.xml
leg_odometry/src/: kinematics_odometry.cpp  odom_publisher.cpp
legged_kinematics_odometry/: LICENSE
legged_kinematics_odometry/launch/: kinematics_odometry.launch.py
legged_kinematics_odometry/src/: kinematics_odometry.cpp  odom_publisher copy 2.cpp  odom_publisher copy.cpp  odom_publisher.cpp
mab_bringup/: CMakeLists.txt  package.xml
mab_bringup/launch/: mab_localization.launch.py  mab_navigation.launch.py  mab_odometry.launch.py  mab_slam.launch.py  mab_spawn.launch.py  mab_teleop.launch.py
mab_bringup/rviz/: debug.rviz  mab_slam.rviz
mab_control/: CMakeLists.txt  package.xml
mab_control/src/: mab_gazebo_control_plugin.cpp
mab_core/: package.xml
mab_description/: CMakeLists.txt  package.xml
mab_description/launch/: robot_state_publisher.launch.py
mab_description/models/silver_badger/: model.config
mab_description/urdf/: bare_metal.urdf  honey_badger.urdf  silver_badger.gazebo.xacro  silver_badger.urdf  silver_badger.urdf.xacro  silver_badger_rviz.urdf
mab_description/urdf/old/: changed_silver_badger.urdf  silver_badger.xacro
mab_description/xacro/: camera.xacro  control.xacro  gazebo.xacro  honey_badger.urdf.xacro  silver_badger.gazebo.xacro  silver_badger.urdf.xacro
mab_gazebo/: CMakeLists.txt  package.xml
mab_gazebo/config/: silver_badger_controller.yaml
mab_gazebo/launch/: empty_world.launch.py  spawn_robot.launch.py  spawn_silver_badger.launch.py  spawn_silver_badger_old.launch.py  spawn_silver_badger_urdf.launch.py
mab_gazebo/worlds/: empty_world.world  mab_house_tires.world  silver_badger_house.world
mab_gazebo_plugin/: CMakeLists.txt  package.xml
mab_gazebo_plugin/src/: mab_gazebo_control_plugin.cpp
mab_keyboard_teleop/: package.xml  setup.cfg  setup.py
mab_keyboard_teleop/launch/: silver_badger_teleop.launch.py
mab_keyboard_teleop/mab_keyboard_teleop/: teleop_node.py
mab_localization/: setup.cfg  setup.py
mab_localization/launch/: orbslam3.launch.py  rf2o.launch.py  rtabmap_launch.py  rtabmap_vo_launch.py  visual_odometry.launch.py
mab_localization/mab_localization/: image_rotate.py  map_saver.py  odom_2d.py  velocity_relay.py
mab_localization/maps/: turtlebot_map.pgm
mab_localization/resource/: laser.yaml  rf2o.yaml  silver_badger_slam.rviz  slam_toolbox_params.yaml
mab_locomotion/: setup.cfg
mab_locomotion/mab_locomotion/: mab_locomotion.py
mab_navigation/: package.xml  setup.py
mab_navigation/launch/: mab_navigation.launch.py  navigation.launch.py
mab_navigation/resource/: amcl.yaml  my_map.pgm  my_map.yaml  nav2 copy.yaml  nav2.yaml
mab_ros/: .gitmodules  README.md
mab_ros/hb40_commons/: package.xml
mab_ros/hb40_commons/config/: global.json
mab_ros/hb40_commons/include/: commons_kinematics.hpp  commons_plot.hpp  tinyOverlord.hpp
mab_ros/hb40_commons/launch/: bridge.launch.py  control.launch.py
mab_ros/hb40_commons/models/mujoco/: scene_flat.xml  scene_ramp.xml
mab_ros/hb40_commons/models/rbdl/: hb40.lua
mab_ros/hb40_commons/models/urdf/: bare_metal.urdf
mab_ros/hb40_commons/msg/: JointCommand.msg  LegState.msg  RobotState.msg  Status.msg  VectorStringArray.msg
mab_ros/hb40_commons/src/: commons_config.cpp
mab_ros/hb40_commons/srv/: EnableFeature.srv
mab_ros/mab_bringup/: CMakeLists.txt
mab_ros/mab_core/: CMakeLists.txt
mab_ros/mab_gazebo/: package.xml
mab_ros/mab_localization/: package.xml  setup.py
mab_ros/mab_locomotion/: package.xml  setup.py
mab_ros/mab_navigation/: setup.cfg
mab_ros/mab_stand/: setup.cfg  setup.py
mab_ros/mab_utils/: setup.py
mab_stand/: package.xml
mab_stand/mab_stand/: mab_stand.py  mab_stand_old.py
mab_utils/: package.xml  setup.cfg  setup.py
mab_utils/mab_utils/: camera_frame_stabilizer.py  image_rotate.py  odom_gt.py  odom_plotter.py  project_laser_frame.py  publish_robot_state.py
mab_utils/resource/: laser.yaml
quad_stack/quadstack_bringup/: CMakeLists.txt  package.xml
quad_stack/quadstack_contact/: package.xml  setup.cfg  setup.py
quad_stack/quadstack_gazebo/: CMakeLists.txt  package.xml
quad_stack/quadstack_gazebo/config/: silver_badger_controller.yaml
quad_stack/quadstack_gazebo/launch/: spawn_robot.launch.py
quad_stack/quadstack_gazebo/worlds/: mab_house.world  mab_house_tires.world
quad_stack/quadstack_keyboard_teleop/: package.xml  setup.cfg  setup.py
quad_stack/quadstack_localization/: package.xml  setup.cfg  setup.py
quad_stack/quadstack_navigation/: package.xml  setup.cfg  setup.py
quad_stack/quadstack_stand/: package.xml  setup.cfg  setup.py
quad_stack/quadstack_utils/: package.xml  setup.cfg  setup.py
realsense2_description/urdf/: test_d435_camera.urdf.xacro
robots/a1_description/: CMakeLists.txt  package.xml
robots/silver_badger_description/: CMakeLists.txt  package.xml
robots/silver_badger_description/meshes/: L2.stl
robots/silver_badger_description/urdf/: silver_badger.urdf  silver_badger_new_inertias.urdf  silver_badger_old_inertia.urdf  silver_badger_rviz.urdf
robots/silver_badger_description/xacro/: camera_mount.xacro  control.xacro  gazebo.xacro  robot.xacro  robot_old_inertia.xacro  silver_badger.urdf.xacro  silver_badger.urdf_new_inertia.xacro
src/: imu_gt_fd.cpp  kinematics_odometry.cpp  odom_publisher.cpp
(+132 files in other folders)
