<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>mab_description</name>
	<version>0.0.1</version>
	<description>
		3D models of the MAB robots for simulation and visualization
	</description>

	<maintainer email="matteo.luperto@unimi.it">Matteo Luperto</maintainer>
	<maintainer email="davide@robot-learning.de">Davide Tateo</maintainer>

	<license>BSD</license>



	<author email="matteo.luperto@unimi.it">Matteo Luperto</author>
	<author email="davide@robot-learning.de">Davide Tateo</author>

	<buildtool_depend>ament_cmake</buildtool_depend>

 	<depend>urdf</depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
