<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>quadstack_gazebo</name>
	<version>0.0.1</version>
	<description>
		Package to spawn the quadstack robot in gazebo
	</description>

	<maintainer email="dyuman2001@gmail.com">Dyuman Aditya</maintainer>

	<license>BSD</license>

	<author email="dyuman2001@gmail.com">Dyuman Aditya</author>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>realsense_gazebo_plugin</depend>
	<depend>gazebo_ros</depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
