<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>silver_badger_description</name>
	<version>0.0.1</version>
	<description>
		3D models of the MAB silver_badger robot for simulation and visualization
	</description>

	<maintainer email="dyuman2001@gmail.com">Dyuman Aditya</maintainer>

	<license>BSD</license>

	<author email="dyuman2001@gmail.com">Dyuman Aditya</author>

	<buildtool_depend>ament_cmake</buildtool_depend>

 	<depend>urdf</depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
